Added method for testing create.